--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                 </button>
                 <div class="my-4 text-center">
                   <span class="block font-semibold mb-4">Total Expense:
-                    <span class="font-normal"id="display-total-expense">
+                    <span class="font-normal"id="totalExpenses-balance">
                       00</span>/-</span>
-                  <span class="block font-semibold">Balance: <span class="font-normal"id="display-balance">00</span>/-</span>
+                  <span class="block font-semibold">Balance: <span class="font-normal"id="current-balance">00</span>/-</span>
                 </div>
               </div>
               <!-- END OF EXPENSE -->
