--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
               <div class="income-box mb-5">
                 <!-- Title -->
                 <h2 class="text-center font-bold text-lg mb-3">Income</h2>
+                <!-- for error show p  -->
+                <p id="show-error"style="color: red;margin-left:20px;font-size: 14px"></p>
                 <div class="grid grid-cols-3">
                   <span class="col-span-1">Income :</span>
                   <input type="text"placeholder="Monthly Income"id="income-input-box"
